--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "ZarinaAndAyesha",
   "license": "MIT",
   "dependencies": {
+    "antd": "^5.12.2",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
@@ -21,10 +22,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-formidable": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.2",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "slugify": "^1.6.6"
   }
 }
