Added complete functionalities in homepage, Cart, Categories,Profile update, created different filters for categories

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ PORT=8080
 DEV_MODE=development
 MONGO_URL=mongodb+srv://Zareesha:Zareeshaaa@cluster0.kkb4bos.mongodb.net/ecommerce
 JWT_SECRET=AAAAAAA
+BRAINTREE_MERCHANT_ID=7zbbq5wdqw6v2twp
+BRAINTREE_PUBLIC_KEY=rhx6x9ck4jbcx5b9
+BRAINTREE_PRIVATE_KEY=9ad1f5a288fd2d3da9aa9e8a416943fa
